RESOLVED FIXED 261429
Collapsed table border colors don't recompute correctly on color scheme change
https://bugs.webkit.org/show_bug.cgi?id=261429
Summary Collapsed table border colors don't recompute correctly on color scheme change
Aditya Keerthi
Reported 2023-09-11 14:17:43 PDT
We are currently failing `css/css-color-adjust/rendering/dark-color-scheme/color-scheme-table-border-currentcolor-responsive.html`.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-11 14:17:57 PDT
Aditya Keerthi
Comment 2 2023-09-11 14:26:26 PDT
EWS
Comment 3 2023-09-14 09:37:43 PDT
Committed 267993@main (0b505d6c2266): <https://commits.webkit.org/267993@main> Reviewed commits have been landed. Closing PR #17669 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.