Collapsed table border colors don't recompute correctly on color scheme change https://bugs.webkit.org/show_bug.cgi?id=261429 rdar://115313292

Reviewed by Antti Koivisto.

Collapsed borders are currently invalidated by comparing `BorderData` whenever
a style change occurs. However, when the used color scheme changes and the border
color is `currentcolor`, it's possible for the `BorderData` to be equivalent,
even though the resolved border color may be different.

To fix, leverage the existing `BorderData::isEquivalentForPainting` helper to
invalidate collapsed table borders whenever a border uses `currentcolor` and
the resolved colors are different.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::styleDidChange):
* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::styleDidChange):
* Source/WebCore/rendering/RenderTableCol.cpp:
(WebCore::RenderTableCol::styleDidChange):
* Source/WebCore/rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::styleDidChange):
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::styleDidChange):
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::borderIsEquivalentForPainting const):

Canonical link: https://commits.webkit.org/267993@main